# sprite-animator

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
sprite_animator/: __init__.py  cli.py  template.py
